RESOLVED FIXED218682
Fix warning related to unsigned >=0 ASSERT
https://bugs.webkit.org/show_bug.cgi?id=218682
Summary Fix warning related to unsigned >=0 ASSERT
Rob Buis
Reported 2020-11-07 01:56:56 PST
Source/WebCore/rendering/RenderText.cpp:592:19: warning: comparison of unsigned expression in ‘>= 0’ is always true [-Wtype-limits]
Attachments
Patch (1.56 KB, patch)
2020-11-07 02:05 PST, Rob Buis
no flags
Rob Buis
Comment 1 2020-11-07 02:05:31 PST
EWS
Comment 2 2020-11-07 14:20:31 PST
Committed r269566: <https://trac.webkit.org/changeset/269566> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413522 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-07 14:21:16 PST
Note You need to log in before you can comment on or make changes to this bug.