Fix warning related to unsigned >=0 ASSERT https://bugs.webkit.org/show_bug.cgi?id=218682

Patch by Rob Buis <rbuis@igalia.com> on 2020-11-07
Reviewed by Fujii Hironori.

Source/WebCore/rendering/RenderText.cpp:592:19: warning: comparison of unsigned expression in ‘>= 0’ is always true [-Wtype-limits]

* rendering/RenderText.cpp:
(WebCore::createVisiblePositionAfterAdjustingOffsetForBiDi):

Canonical link: https://commits.webkit.org/231357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269566 268f45cc-cd09-0410-ab3c-d52691b4dbfc